<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_baseline_directions_nav_bus_24px"
            android:title="@string/route" />
        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_baseline_touch_app_24px"
            android:title="@string/app_ticket" />
        <item
            android:id="@+id/nav_smarter_card"
            android:icon="@drawable/ic_baseline_credit_card_24px"
            android:title="@string/card_manager" />
    </group>

    <item android:title="@string/nav_about">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_baseline_live_help_24px"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_24px"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>

