<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/layout_pmt_header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorStylishGreen"
            >


            <TextView
                android:id="@+id/tv_pmt_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_number_example"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginTop="90dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_pmt_card_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online_card_balance"
                android:layout_below="@id/tv_pmt_card_number"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                />


            <TextView
                android:id="@+id/tv_pmt_card_balance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_balance"
                android:layout_below="@id/tv_pmt_card_balance"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/topup_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topup_amount_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="50dp"
            android:layout_below="@id/layout_pmt_header"/>
        <Spinner
            android:id="@+id/spin_pmt_options"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/topup_amount_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@drawable/new_card_outline"
            android:theme="@style/Spinner"
            />

        <Button
            android:id="@+id/btn_pmt_make_payment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="130dp"
            android:text="@string/make_payment"
            android:background="@color/colorStylishGreen"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/spin_pmt_options"

            />

    </RelativeLayout>
</LinearLayout>