<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CardManagerActivity"
    tools:showIn="@layout/activity_card_manager">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:id="@+id/tv_name_on_card_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/name_on_card"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
           />

        <EditText
            android:id="@+id/edtv_name_on_card"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_name_on_card_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/new_card_outline"
            android:hint="@string/actor"
            android:inputType="textCapWords"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDim"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/tv_card_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtv_name_on_card"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:text="@string/card_number"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/edtv_card_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_card_number_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/new_card_outline"
            android:hint="@string/card_number_example"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDim" />



        <!--Card Type-->
        <TextView
            android:id="@+id/tv_card_sub_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtv_card_number"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:text="@string/card_type_label"
            android:textColor="@color/colorWhite" />

        <Spinner
            android:id="@+id/spin_card_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_card_sub_type_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/new_card_outline"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:theme="@style/Spinner"
            />

        <!--Account Type-->
        <TextView
            android:id="@+id/tv_card_account_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spin_card_type"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:text="@string/account_type_label"
            android:textColor="@color/colorWhite" />

        <Spinner
            android:id="@+id/spin_account_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_card_account_type_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/new_card_outline"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:theme="@style/Spinner"
            />

        <!--Bank Type-->
        <TextView
            android:id="@+id/tv_card_bank_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spin_account_type"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:text="@string/card_bank_label"
            android:textColor="@color/colorWhite" />

        <Spinner
            android:id="@+id/spin_card_bank_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_card_bank_type_label"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/new_card_outline"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:theme="@style/Spinner"
            />

        <Button
            android:id="@+id/add_card_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:text="Create Card"
            android:background="@color/colorFunkyBlue"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/spin_card_bank_type"/>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>